--- a/content/05-cardano-testnet/02-about/01-testnet-introduction.mdx
+++ b/content/05-cardano-testnet/02-about/01-testnet-introduction.mdx
@@ -5,7 +5,7 @@ metaTitle: Vasil introduction
 
 >Note: New dedicated *preview* and *pre-production* environments have been recently spun up for the final stages of testing Vasil functionality. These environments offer improved chain density and a better developer experience.
 
->We recommend that all developers, SPOs, and exchanges use these environments rather than the main Cardano testnet. For more details, see [environments overview here](https://docs.cardano.org/cardano-testnet/getting-started/#environments).
+>We recommend that all developers, SPOs, and exchanges use these environments rather than the main Cardano testnet. For more details, see [environments overview](https://docs.cardano.org/cardano-testnet/getting-started/#environments).
 
 Vasil enforces the next major upgrade to the Cardano protocol using [Cardano’s hard fork combinator (HFC) approach](https://docs.cardano.org/core-concepts/about-hard-forks). This upgrade is named after a much loved and respected Cardano community member, Vasil St Dabov.
 
