--- a/content/05-cardano-testnet/04-daedalus-testnet.mdx
+++ b/content/05-cardano-testnet/04-daedalus-testnet.mdx
@@ -1,6 +1,6 @@
 ---
-title: Daedalus wallet for the Cardano testnet
-metaTitle: Daedalus wallet for the Cardano testnet
+title: Daedalus wallet for the Cardano testnets
+metaTitle: Daedalus wallet for the Cardano testnets
 ---
 
 import WalletDownloaders from '../../src/components/WalletDownloaders'
