--- a/content/05-cardano-testnet/05-tools/01-faucet.mdx
+++ b/content/05-cardano-testnet/05-tools/01-faucet.mdx
@@ -1,6 +1,6 @@
 ---
-title: Testnet faucet
-metaTitle: Testnet faucet
+title: Testnets faucet
+metaTitle: Testnets faucet
 ---
 
 import Faucet from '../../../src/components/Faucet'
