--- a/content/05-cardano-testnet.mdx
+++ b/content/05-cardano-testnet.mdx
@@ -1,6 +1,6 @@
 ---
-title: Cardano Testnet
-metaTitle: Cardano Testnet
+title: Cardano Testnets
+metaTitle: Cardano Testnets
 ---
 
 <!-- heading no content -->
