--- a/content/06-development-guidelines/04-references.mdx
+++ b/content/06-development-guidelines/04-references.mdx
@@ -1,6 +1,6 @@
 ---
-title: Script references
-metaTitle: Script references
+title: References
+metaTitle: References
 ---
 
 Here you will find links to tutorials and examples of creating scripts and transactions on Cardano. You will also find script examples specific to the Babbage era (Vasil functionality).
