Updated 01-introduction.mdx - Capitalized Ada
 - Ada should be uppercase like on the https://cardano.org/what-is-ada/ page, since it is named after Ada Lovelace.
 - Added a hyperlink to the "What is Ada" page.

--- a/content/01-introduction.mdx
+++ b/content/01-introduction.mdx
@@ -12,7 +12,7 @@ If you are interested in building tools on Cardano, integrating with Cardano, an
 
 **Cardano explained**
 
-Cardano is a decentralized third-generation proof-of-stake blockchain platform and home to the ada cryptocurrency. It is the first blockchain platform to evolve out of a scientific philosophy and a research-first driven approach.
+Cardano is a decentralized third-generation proof-of-stake blockchain platform and home to the [Ada cryptocurrency](https://cardano.org/what-is-ada/). It is the first blockchain platform to evolve out of a scientific philosophy and a research-first driven approach.
 
 The Cardano platform has been designed from the ground up and verified by an industry-leading combination of top engineers and academic experts in the fields of blockchain and cryptography. It has a strong focus on sustainability, scalability, and transparency.  It is a fully open source project that aims to deliver an inclusive, fair, and resilient infrastructure for financial and social applications on a global scale. One of its primary goals is to bring reliable, secure financial services to those people who do not currently have access. 
 
