--- a/content/02-new-to-cardano/01-what-is-a-blockchain.mdx
+++ b/content/02-new-to-cardano/01-what-is-a-blockchain.mdx
@@ -6,9 +6,8 @@ metaTitle: What is a blockchain?
 A blockchain is a type of database or ledger that is duplicated and distributed
 to all participants within the blockchain network. It is made up of a set of
 interconnected nodes that store data or items of value in blocks. These blocks
-are verified by transactions and linked to each other in chronological order in
-a chain. Details of these transactions are permanently inscribed in the block
-and cannot be altered.
+are validated, cryptograhpically secured, and linked to each other in chronological order in
+a chain. The information stored in the validated blocks of the blockchain cannot be altered later on. It is permanently inscribed in the distributed ledger.
 
 Blockchain technology, otherwise known as distributed ledger technology (DLT),
 provides a decentralized and accessible data structure for various records. Such
