--- a/content/02-new-to-cardano/03-why-use-cardano.mdx
+++ b/content/02-new-to-cardano/03-why-use-cardano.mdx
@@ -30,8 +30,8 @@ interoperable with other blockchains and financial institutions.
 
 To address these needs, Cardano focuses on such core concepts as:
 
-- **Scalability** — ensures that the Cardano ledger is capable of processing a
-  large number of transactions without affecting network performance.
+- **Scalability** — ensures that the Cardano network is capable of processing an increasing
+   number of transactions as user demand grows.
   Scalability also provides higher bandwidth capabilities to allow transactions
   to carry a significant amount of supportive data that can be easily managed
   within the network. For these needs, Cardano is implementing various
