Cardano node provider
Hey Cardano Team!
Nice to meet you!
We're NOWNodes - the blockchain-as-a-service solution that lets users get access to full Nodes and blockbook Explorers via API. 
Also, we provide nodes for Cardano.
Is it possible to make a small mention of our service in it? It can be useful for some of your users, who looking for a private blockchain node. 


Thank you :)

--- a/content/02-new-to-cardano/05-cardano-nodes.mdx
+++ b/content/02-new-to-cardano/05-cardano-nodes.mdx
@@ -62,6 +62,12 @@ transaction’s parameters are met. Assuming that the transaction meets all thes
 requirements, the slot leader will record it as a part of a new block, which
 will then be connected to other blocks in the chain.
 
+**Cardano node provider**
+
+Private node porvider is a good opportunity to join ADA blockchain or to lighten your crypto infrastructure.
+[NOWNodes](https://nownodes.io/nodes/cardano-ada)
+
+
 #### Related topics:
 
 -   [Cardano node](/core-concepts/cardano-node)
