--- a/content/02-new-to-cardano/03-why-use-cardano.mdx
+++ b/content/02-new-to-cardano/03-why-use-cardano.mdx
@@ -76,13 +76,13 @@ To address these needs, Cardano focuses on such core concepts as:
   guarantees; it was delivered with several peer-reviewed papers presented in
   top-tier conferences and publications in the area of cybersecurity and
   cryptography.
-- **Power consumption** — Cardano is a proof-of-stake blockchain. In contrast to
+- **Energy efficiency** — Cardano is a proof-of-stake blockchain. In contrast to
   proof-of-work blockchains, [Cardano requires much less energy](https://iohk.io/en/blog/posts/2021/08/17/why-they-re-calling-cardano-the-green-blockchain/) and computational
-  power. The Bitcoin network grows through computers doing
+  power. The Bitcoin network is secured through computers doing
   ever-more-energy-intensive computations – proof of work – which is
   unsustainable in the long term. Cambridge University has an online tool that
   shows the [computers powering Bitcoin](https://cbeci.org/) already consume
-  twice as much energy as Switzerland every year.
+  more electricity than some countries, like [Switzerland](https://www.bfe.admin.ch/bfe/en/home/supply/statistics-and-geodata/energy-statistics/overall-energy-statistics.html) for example.
 - **Seamless upgrades** — traditionally, blockchains upgrade using hard forks.
   When conducting a hard fork, the current protocol would stop operating, new
   rules and changes would be implemented, and the chain would restart – with its
