Fix the links for stake pool creation
fixes #392

--- a/content/06-development-guidelines/05-operating-a-stake-pool/02-creating-a-stake-pool.mdx
+++ b/content/06-development-guidelines/05-operating-a-stake-pool/02-creating-a-stake-pool.mdx
@@ -32,14 +32,17 @@ To learn how to set up your own stake pool, follow the [installing the node from
 
 You can then proceed with the following operational tasks for managing your stake pool:
 
-- [Getting configuration files](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/getConfigFiles_AND_Connect.md)
-- [Creating keys and addresses](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/keys_and_addresses.md)
-- [Creating a simple transaction](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/simple_transaction.md)
-- [Registering stake address on the blockchain](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/register_key.md)
-- [Generating stake pool keys](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/node_keys.md)
-- [Creating an operational certificate with key evolving signature (KES)](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/KES_period.md)
-- [Configuring topology files for block-producing and relay nodes](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/core_relay.md)
-- [Registering a stake pool with metadata](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/register_stakepool.md)
-- [Starting a node](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/start_your_nodes.md)
-- [Withdrawing rewards](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/withdraw-rewards.md)
-- [Retiring a stake pool](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/retire_stakepool.md)
+- [Getting configuration files](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/1_getConfigFiles_AND_Connect.md)
+- [Creating keys and addresses](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/3_keys_and_addresses.md)
+- [Creating a simple transaction](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/4_simple_transaction.md)
+- [Registering stake address on the blockchain](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/5_register_key.md)
+- [Generating stake pool keys](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/6_node_keys.md)
+- [Creating an operational certificate with key evolving signature (KES)](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/7_KES_period.md)
+- [Configuring topology files for block-producing and relay nodes](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/0_core_relay.md)
+- [Registering a stake pool with metadata](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/8_register_stakepool.md)
+- [Starting a node](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/2_start_your_nodes.md)
+- [Leadership schedule](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/9_leadership_schedule.md)
+- [Withdrawing rewards](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/11_withdraw-rewards.md)
+- [Querying a Stake Pool](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/10_query_stakepool.md)
+- [Retiring a stake pool](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/12_retire_stakepool.md)
+
