--- a/content/06-development-guidelines/05-operating-a-stake-pool/02-creating-a-stake-pool.mdx
+++ b/content/06-development-guidelines/05-operating-a-stake-pool/02-creating-a-stake-pool.mdx
@@ -43,6 +43,6 @@ You can then proceed with the following operational tasks for managing your stak
 - [Starting a node](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/2_start_your_nodes.md)
 - [Leadership schedule](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/9_leadership_schedule.md)
 - [Withdrawing rewards](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/11_withdraw-rewards.md)
-- [Querying a Stake Pool](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/10_query_stakepool.md)
+- [Querying a stake pool](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/10_query_stakepool.md)
 - [Retiring a stake pool](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/12_retire_stakepool.md)
 
