fixing broken links

--- a/content/06-development-guidelines/05-operating-a-stake-pool/04-creating-keys-and-certificates.mdx
+++ b/content/06-development-guidelines/05-operating-a-stake-pool/04-creating-keys-and-certificates.mdx
@@ -26,9 +26,9 @@ keys in the
 
 **Instructions to create and manage stake pool operation keys:**
 
-- [Creating keys and addresses](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/keys_and_addresses.md)
-- [Creating KES key pair](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/KES_period.md)
-- [Generating stake pool keys](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/node_keys.md)
+- [Creating keys and addresses](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/3_keys_and_addresses.md)
+- [Creating KES key pair](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/7_KES_period.md)
+- [Generating stake pool keys](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/6_node_keys.md)
 
 ### Creating an operational certificate
 
@@ -49,9 +49,9 @@ within which the certificate is valid before you need to create another one.
 
 **Instructions to work with operational certificates:**
 
-- [Creating an operational certificate with KES](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/KES_period.md)
+- [Creating an operational certificate with KES](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/7_KES_period.md)
 - [Generating a registration certificate](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/register_stakepool.md#generate-stake-pool-registration-certificate)
-- [Registering stake address and creating a registration certificate](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/register_key.md)
+- [Registering stake address and creating a registration certificate](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/8_register_stakepool.md#generate-stake-pool-registration-certificate)
 
 The counter becomes significant when an attacker has compromised the KES key, in
 which case the owner of the cold keys can create a new KES key and a new
