refactor and reuse downloader component

--- a/content/05-cardano-testnet/05-daedalus-testnet.mdx
+++ b/content/05-cardano-testnet/05-daedalus-testnet.mdx
@@ -27,4 +27,6 @@ fully-featured and may contain bugs.
 - 25 GB of free drive space
 - Broadband Internet connection
 
-<WalletDownloaders />
+<WalletDownloaders env="preview" />
+<WalletDownloaders env="preprod" />
+<WalletDownloaders env="testnet" />
