--- a/content/05-cardano-testnet/04-local-testnet.mdx
+++ b/content/05-cardano-testnet/04-local-testnet.mdx
@@ -15,6 +15,7 @@ Plutip can be used in two different ways:
 
 -   One option is to use the Plutip tool with a setup that provides an executable for starting a private network and setting up some funded wallets. See [this tutorial](https://github.com/mlabs-haskell/plutip/tree/master/local-cluster).
 -   Another option is to use a separate branch of Plutip, which provides a modified setup for hard forks and instructions on how to execute them. See [this tutorial](https://github.com/mlabs-haskell/plutip/blob/vasil-local-cluster-cabal-build/vasil-hardfork.md).
+-   The third option is to run Plutip with cardano-transaction-lib, which provides a declarative interface to local clusters for using in test suites. See  [this tutorial](https://github.com/Plutonomicon/cardano-transaction-lib/blob/develop/doc/plutip-testing.md).
     
 *Tutorials referenced above are created by the MLabs team.*
 
