--- a/content/08-native-tokens/02-minimum-ada-value-requirement.mdx
+++ b/content/08-native-tokens/02-minimum-ada-value-requirement.mdx
@@ -16,8 +16,7 @@ The minimum number of ada required is [calculated using this method](https://git
 As a consequence of this design,
 
 - It is impossible to make outputs containing only custom tokens
-- The number of each kind of token in an output does not affect the min-ada-value of the output, but the number of types of tokens contained in an output increases the min-value.
-- The reason for this is that the names and policy IDs of each of the types of tokens take up additional space in the output.
+- The number of each token kind in an output can slightly affect the min-ada-value of this output. This is because the minimum UTXO value takes memory overhead into account when storing it on a running computer. The increase in ada value affects the memory overhead *insignificantly*, however, adding more multi-assets affects this value much more. The reason for this is that the names and policy IDs of each of the types of tokens take up additional space in the output. For efficient encoding, see [the CBOR specification](https://www.rfc-editor.org/rfc/rfc8949#name-specification-of-the-cbor-e).
 - Sending custom tokens to an address always involves sending the min-ada-value of ada to that address alongside the custom tokens (by including the ada in the same output). If - the address is not spendable by the user sending the tokens, the ada sent alongside the tokens no longer belongs to the sender.
 - Before transferring custom tokens, users may choose to use off-chain communication to negotiate who supplies the ada to cover the min-ada-value in the output made by the transferring transaction
 - To recover the ada stored alongside custom tokens in an output O, the user must either: a) Spend the output O, and burn the custom tokens stored therein b) Spend an output O and an output O’, and consolidate the tokens therein with the same collection of types of custom tokens stored in another output (spent within the same transaction)
