--- a/content/03-learn/08-cardano-keys.mdx
+++ b/content/03-learn/08-cardano-keys.mdx
@@ -56,10 +56,10 @@ Address keys represent the functions of the addresses derived from the keys for 
 - Payment key: single address key pair usually used for generating UTXO addresses
 - Staking key: stake/reward address key pair usually used for generating account/reward addresses.
 
-## Further resources
+## Further reading
 
-- [Creating keys and addresses](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/keys_and_addresses.md)
-- [Creating KES key pair](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/KES_period.md)
+- [Creating keys and addresses](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/3_keys_and_addresses.md)
+- [Creating KES key pair](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/7_KES_period.md)
 - [Generating stake pool keys](https://iohk.zendesk.com/hc/en-us/articles/900001331786-Generate-stake-pool-keys)
 - [Generating payment/staking keys and address](https://iohk.zendesk.com/hc/en-us/articles/900001219883-Generating-payment-staking-keys-and-address)
-- [KES period](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/KES_period.md)
+
