--- a/content/09-plutus/08-Plutus-validator-scripts.mdx
+++ b/content/09-plutus/08-Plutus-validator-scripts.mdx
@@ -72,3 +72,4 @@ See the following for more details:
 
 - [A list of cost model parameters and their brief description](https://plutus.readthedocs.io/en/stable/reference/cost-model-parameters.html)
 - [Sources to find out more about the meaning of parameters](https://plutus.readthedocs.io/en/latest/reference/bibliography.html#id13)
+- [Common weaknesses](https://plutus.readthedocs.io/en/latest/reference/writing-scripts/common-weaknesses/index.html)
