--- a/content/02-new-to-cardano/00-introduction.mdx
+++ b/content/02-new-to-cardano/00-introduction.mdx
@@ -5,9 +5,7 @@ metaTitle: Introduction
 
 The understanding of basic concepts plays an integral role in getting acquainted
 with blockchain and [Cardano](https://cardano.org/) in particular. In this section, we start our journey
-with basic concepts such as the notion of blockchain, understanding the
-[consensus mechanism](https://docs.cardano.org/learn/consensus-explained), and what is a cryptocurrency. You will also find out how
-Cardano differs from other existing solutions, learn how to track blockchain
+with basic concepts such as the notion of blockchain, understanding [consensus](https://docs.cardano.org/learn/consensus-explained), and what is a cryptocurrency. You will also find out how Cardano differs from other existing solutions, learn how to track blockchain
 activities, and understand why smart contracts matter. If you are new to
 Cardano, you will also find out information about various crypto wallets, their
 applicability with Cardano’s native currency ada, and how to purchase crypto.
