--- a/content/09-plutus/09-collateral-mechanism.mdx
+++ b/content/09-plutus/09-collateral-mechanism.mdx
@@ -3,9 +3,9 @@ title: About the collateral mechanism
 metaTitle: About the collateral mechanism
 ---
 
-Alonzo has ushered in the era of smart contracts on [Cardano](https://cardano.org/). The collateral mechanism is an important feature that has been designed to ensure successful smart contract execution. 
+The collateral mechanism is an important feature that has been designed to ensure successful smart contract execution. 
 
-Relying on the guarantees provided by the deterministic design of the Alonzo ledger, Cardano implements a two-phase validation scheme. The main reason for introducing two-phase validation is to limit the amount of uncompensated validation work by nodes. Each phase serves a purpose in achieving this goal:
+Relying on the guarantees provided by the deterministic design of the ledger, Cardano implements a two-phase validation scheme. The main reason for introducing two-phase validation is to limit the amount of uncompensated validation work by nodes. Each phase serves a purpose in achieving this goal:
 
 - The first phase checks whether the transaction is constructed correctly and can pay its processing fee
 - The second phase runs the scripts included in the transaction 
