updating the UTXO definition

--- a/content/13-glossary.mdx
+++ b/content/13-glossary.mdx
@@ -350,7 +350,7 @@ Security tokens are subject to federal law governing regulations.
   a digital token that holds certain functionality in regards to a concrete project or environment. These tokens can be used as payment units, rewards, or grant access to a specific network. 
 
 ## UTXO
-  unspent transaction output. 
+  unspent transaction output - an accounting model that is used by blockchains to track users’ funds and their distribution within accounts. The UTXO accounting model guarantees security, data privacy, and scalability at the core of financial activities.
 
 ## Voltaire
   fifth phase of Cardano development in which treasury and governance capabilities will be delivered. 
