--- a/content/06-development-guidelines/09-scalability-solutions/01-hydra.mdx
+++ b/content/06-development-guidelines/09-scalability-solutions/01-hydra.mdx
@@ -9,7 +9,7 @@ Hydra Head is the first protocol of the Hydra family of protocols, which embodie
 
 ### Development resources:
 
--   [Hydra Head proof-of-concept repository](https://github.com/input-output-hk/hydra-poc#readme)
+-   [Hydra Head proof of concept repository](https://github.com/input-output-hk/hydra-poc#readme)
 -   [Hydra Head documentation](https://hydra.family/head-protocol/)
     
 ### Further reading:
