--- a/content/06-development-guidelines/09-scalability-solutions/02-mithril.mdx
+++ b/content/06-development-guidelines/09-scalability-solutions/02-mithril.mdx
@@ -9,7 +9,7 @@ The first application of Mithril will allow faster bootstrapping of Cardano node
 
 ### Development resources:
 
--   [Mithril proof-of-concept repository](https://github.com/input-output-hk/mithril#readme)
+-   [Mithril proof of concept repository](https://github.com/input-output-hk/mithril#readme)
 -   [Mithril documentation](https://mithril.network/doc/)
     
 ### Further reading:
